--- a/src/scss/1-utils/_variables.scss
+++ b/src/scss/1-utils/_variables.scss
@@ -96,7 +96,7 @@ $thumb-height: 6rem;
 // motion
 ////////////////////////////////
 
-$timing: 0.2s ease;
+$timing: 0.2s ease-out;
 $timing-fast: 0.1s ease-out;
 $timing-gradual: 0.275s ease-out;
 $timing-long: 0.4s ease-out;
